parser.output
Terminals unused in grammar

    COMMENT


State 56 conflicts: 12 shift/reduce
State 83 conflicts: 12 shift/reduce
State 84 conflicts: 12 shift/reduce
State 85 conflicts: 12 shift/reduce
State 86 conflicts: 12 shift/reduce
State 87 conflicts: 12 shift/reduce
State 88 conflicts: 12 shift/reduce
State 89 conflicts: 12 shift/reduce
State 90 conflicts: 12 shift/reduce
State 91 conflicts: 12 shift/reduce
State 92 conflicts: 12 shift/reduce
State 93 conflicts: 12 shift/reduce
State 94 conflicts: 12 shift/reduce
State 101 conflicts: 12 shift/reduce
State 102 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Funcs

    2 Funcs: ε
    3      | FuncDecl Funcs

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE

    5 RetType: Type
    6        | VOID

    7 Formals: ε
    8        | FormalsList

    9 FormalsList: FormalDecl
   10            | FormalDecl COMMA FormalsList

   11 FormalDecl: Type ID

   12 Statements: Statement
   13           | Statements Statement

   14 Statement: LBRACE Statements RBRACE
   15          | Type ID SC
   16          | Type ID ASSIGN Exp SC
   17          | ID ASSIGN Exp SC
   18          | Call SC
   19          | RETURN SC
   20          | RETURN Exp SC
   21          | IF LPAREN Exp RPAREN Statement
   22          | IF LPAREN Exp RPAREN Statement ELSE Statement
   23          | WHILE LPAREN Exp RPAREN Statement
   24          | BREAK SC
   25          | CONTINUE SC

   26 Call: ID LPAREN ExpList RPAREN
   27     | ID LPAREN RPAREN

   28 ExpList: Exp
   29        | Exp COMMA ExpList

   30 Type: INT
   31     | BYTE
   32     | BOOL

   33 Exp: LPAREN Exp RPAREN
   34    | Exp ADD Exp
   35    | Exp SUB Exp
   36    | Exp MUL Exp
   37    | Exp DIV Exp
   38    | ID
   39    | Call
   40    | NUM
   41    | NUM_B
   42    | STRING
   43    | TRUE
   44    | FALSE
   45    | NOT Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp EQ Exp
   49    | Exp NE Exp
   50    | Exp LT Exp
   51    | Exp GT Exp
   52    | Exp LE Exp
   53    | Exp GE Exp
   54    | LPAREN Type RPAREN Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VOID (258) 6
    INT (259) 30
    BYTE (260) 31
    BOOL (261) 32
    AND (262) 46
    OR (263) 47
    NOT (264) 45
    TRUE (265) 43
    FALSE (266) 44
    RETURN (267) 19 20
    IF (268) 21 22
    ELSE (269) 22
    WHILE (270) 23
    BREAK (271) 24
    CONTINUE (272) 25
    SC (273) 15 16 17 18 19 20 24 25
    COMMA (274) 10 29
    LPAREN (275) 4 21 22 23 26 27 33 54
    RPAREN (276) 4 21 22 23 26 27 33 54
    LBRACE (277) 4 14
    RBRACE (278) 4 14
    ASSIGN (279) 16 17
    EQ (280) 48
    NE (281) 49
    LT (282) 50
    GT (283) 51
    LE (284) 52
    GE (285) 53
    ADD (286) 34
    SUB (287) 35
    MUL (288) 36
    DIV (289) 37
    ID (290) 4 11 15 16 17 26 27 38
    NUM (291) 40
    NUM_B (292) 41
    STRING (293) 42
    COMMENT (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    Program (41)
        on left: 1
        on right: 0
    Funcs (42)
        on left: 2 3
        on right: 1 3
    FuncDecl (43)
        on left: 4
        on right: 3
    RetType (44)
        on left: 5 6
        on right: 4
    Formals (45)
        on left: 7 8
        on right: 4
    FormalsList (46)
        on left: 9 10
        on right: 8 10
    FormalDecl (47)
        on left: 11
        on right: 9 10
    Statements (48)
        on left: 12 13
        on right: 4 13 14
    Statement (49)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 12 13 21 22 23
    Call (50)
        on left: 26 27
        on right: 18 39
    ExpList (51)
        on left: 28 29
        on right: 26 29
    Type (52)
        on left: 30 31 32
        on right: 5 11 15 16 54
    Exp (53)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 16 17 20 21 22 23 28 29 33 34 35 36 37 45 46 47 48 49 50 51 52 53 54


State 0

    0 $accept: • Program $end

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Program   go to state 5
    Funcs     go to state 6
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 1

    6 RetType: VOID •

    $default  reduce using rule 6 (RetType)


State 2

   30 Type: INT •

    $default  reduce using rule 30 (Type)


State 3

   31 Type: BYTE •

    $default  reduce using rule 31 (Type)


State 4

   32 Type: BOOL •

    $default  reduce using rule 32 (Type)


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 10


State 6

    1 Program: Funcs •

    $default  reduce using rule 1 (Program)


State 7

    3 Funcs: FuncDecl • Funcs

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Funcs     go to state 11
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 8

    4 FuncDecl: RetType • ID LPAREN Formals RPAREN LBRACE Statements RBRACE

    ID  shift, and go to state 12


State 9

    5 RetType: Type •

    $default  reduce using rule 5 (RetType)


State 10

    0 $accept: Program $end •

    $default  accept


State 11

    3 Funcs: FuncDecl Funcs •

    $default  reduce using rule 3 (Funcs)


State 12

    4 FuncDecl: RetType ID • LPAREN Formals RPAREN LBRACE Statements RBRACE

    LPAREN  shift, and go to state 13


State 13

    4 FuncDecl: RetType ID LPAREN • Formals RPAREN LBRACE Statements RBRACE

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 7 (Formals)

    Formals      go to state 14
    FormalsList  go to state 15
    FormalDecl   go to state 16
    Type         go to state 17


State 14

    4 FuncDecl: RetType ID LPAREN Formals • RPAREN LBRACE Statements RBRACE

    RPAREN  shift, and go to state 18


State 15

    8 Formals: FormalsList •

    $default  reduce using rule 8 (Formals)


State 16

    9 FormalsList: FormalDecl •
   10            | FormalDecl • COMMA FormalsList

    COMMA  shift, and go to state 19

    $default  reduce using rule 9 (FormalsList)


State 17

   11 FormalDecl: Type • ID

    ID  shift, and go to state 20


State 18

    4 FuncDecl: RetType ID LPAREN Formals RPAREN • LBRACE Statements RBRACE

    LBRACE  shift, and go to state 21


State 19

   10 FormalsList: FormalDecl COMMA • FormalsList

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    FormalsList  go to state 22
    FormalDecl   go to state 16
    Type         go to state 17


State 20

   11 FormalDecl: Type ID •

    $default  reduce using rule 11 (FormalDecl)


State 21

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE • Statements RBRACE

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    ID        shift, and go to state 29

    Statements  go to state 30
    Statement   go to state 31
    Call        go to state 32
    Type        go to state 33


State 22

   10 FormalsList: FormalDecl COMMA FormalsList •

    $default  reduce using rule 10 (FormalsList)


State 23

   19 Statement: RETURN • SC
   20          | RETURN • Exp SC

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    SC      shift, and go to state 37
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 44


State 24

   21 Statement: IF • LPAREN Exp RPAREN Statement
   22          | IF • LPAREN Exp RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 45


State 25

   23 Statement: WHILE • LPAREN Exp RPAREN Statement

    LPAREN  shift, and go to state 46


State 26

   24 Statement: BREAK • SC

    SC  shift, and go to state 47


State 27

   25 Statement: CONTINUE • SC

    SC  shift, and go to state 48


State 28

   14 Statement: LBRACE • Statements RBRACE

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    ID        shift, and go to state 29

    Statements  go to state 49
    Statement   go to state 31
    Call        go to state 32
    Type        go to state 33


State 29

   17 Statement: ID • ASSIGN Exp SC
   26 Call: ID • LPAREN ExpList RPAREN
   27     | ID • LPAREN RPAREN

    LPAREN  shift, and go to state 50
    ASSIGN  shift, and go to state 51


State 30

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements • RBRACE
   13 Statements: Statements • Statement

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    RBRACE    shift, and go to state 52
    ID        shift, and go to state 29

    Statement  go to state 53
    Call       go to state 32
    Type       go to state 33


State 31

   12 Statements: Statement •

    $default  reduce using rule 12 (Statements)


State 32

   18 Statement: Call • SC

    SC  shift, and go to state 54


State 33

   15 Statement: Type • ID SC
   16          | Type • ID ASSIGN Exp SC

    ID  shift, and go to state 55


State 34

   45 Exp: NOT • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 56


State 35

   43 Exp: TRUE •

    $default  reduce using rule 43 (Exp)


State 36

   44 Exp: FALSE •

    $default  reduce using rule 44 (Exp)


State 37

   19 Statement: RETURN SC •

    $default  reduce using rule 19 (Statement)


State 38

   33 Exp: LPAREN • Exp RPAREN
   54    | LPAREN • Type RPAREN Exp

    INT     shift, and go to state 2
    BYTE    shift, and go to state 3
    BOOL    shift, and go to state 4
    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Type  go to state 57
    Exp   go to state 58


State 39

   26 Call: ID • LPAREN ExpList RPAREN
   27     | ID • LPAREN RPAREN
   38 Exp: ID •

    LPAREN  shift, and go to state 50

    $default  reduce using rule 38 (Exp)


State 40

   40 Exp: NUM •

    $default  reduce using rule 40 (Exp)


State 41

   41 Exp: NUM_B •

    $default  reduce using rule 41 (Exp)


State 42

   42 Exp: STRING •

    $default  reduce using rule 42 (Exp)


State 43

   39 Exp: Call •

    $default  reduce using rule 39 (Exp)


State 44

   20 Statement: RETURN Exp • SC
   34 Exp: Exp • ADD Exp
   35    | Exp • SUB Exp
   36    | Exp • MUL Exp
   37    | Exp • DIV Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • EQ Exp
   49    | Exp • NE Exp
   50    | Exp • LT Exp
   51    | Exp • GT Exp
   52    | Exp • LE Exp
   53    | Exp • GE Exp

    AND  shift, and go to state 59
    OR   shift, and go to state 60
    SC   shift, and go to state 61
    EQ   shift, and go to state 62
    NE   shift, and go to state 63
    LT   shift, and go to state 64
    GT   shift, and go to state 65
    LE   shift, and go to state 66
    GE   shift, and go to state 67
    ADD  shift, and go to state 68
    SUB  shift, and go to state 69
    MUL  shift, and go to state 70
    DIV  shift, and go to state 71


State 45

   21 Statement: IF LPAREN • Exp RPAREN Statement
   22          | IF LPAREN • Exp RPAREN Statement ELSE Statement

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 72


State 46

   23 Statement: WHILE LPAREN • Exp RPAREN Statement

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 73


State 47

   24 Statement: BREAK SC •

    $default  reduce using rule 24 (Statement)


State 48

   25 Statement: CONTINUE SC •

    $default  reduce using rule 25 (Statement)


State 49

   13 Statements: Statements • Statement
   14 Statement: LBRACE Statements • RBRACE

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    RBRACE    shift, and go to state 74
    ID        shift, and go to state 29

    Statement  go to state 53
    Call       go to state 32
    Type       go to state 33


State 50

   26 Call: ID LPAREN • ExpList RPAREN
   27     | ID LPAREN • RPAREN

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    RPAREN  shift, and go to state 75
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call     go to state 43
    ExpList  go to state 76
    Exp      go to state 77


State 51

   17 Statement: ID ASSIGN • Exp SC

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 78


State 52

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE •

    $default  reduce using rule 4 (FuncDecl)


State 53

   13 Statements: Statements Statement •

    $default  reduce using rule 13 (Statements)


State 54

   18 Statement: Call SC •

    $default  reduce using rule 18 (Statement)


State 55

   15 Statement: Type ID • SC
   16          | Type ID • ASSIGN Exp SC

    SC      shift, and go to state 79
    ASSIGN  shift, and go to state 80


State 56

   34 Exp: Exp • ADD Exp
   35    | Exp • SUB Exp
   36    | Exp • MUL Exp
   37    | Exp • DIV Exp
   45    | NOT Exp •
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • EQ Exp
   49    | Exp • NE Exp
   50    | Exp • LT Exp
   51    | Exp • GT Exp
   52    | Exp • LE Exp
   53    | Exp • GE Exp

    AND  shift, and go to state 59
    OR   shift, and go to state 60
    EQ   shift, and go to state 62
    NE   shift, and go to state 63
    LT   shift, and go to state 64
    GT   shift, and go to state 65
    LE   shift, and go to state 66
    GE   shift, and go to state 67
    ADD  shift, and go to state 68
    SUB  shift, and go to state 69
    MUL  shift, and go to state 70
    DIV  shift, and go to state 71

    AND       [reduce using rule 45 (Exp)]
    OR        [reduce using rule 45 (Exp)]
    EQ        [reduce using rule 45 (Exp)]
    NE        [reduce using rule 45 (Exp)]
    LT        [reduce using rule 45 (Exp)]
    GT        [reduce using rule 45 (Exp)]
    LE        [reduce using rule 45 (Exp)]
    GE        [reduce using rule 45 (Exp)]
    ADD       [reduce using rule 45 (Exp)]
    SUB       [reduce using rule 45 (Exp)]
    MUL       [reduce using rule 45 (Exp)]
    DIV       [reduce using rule 45 (Exp)]
    $default  reduce using rule 45 (Exp)


State 57

   54 Exp: LPAREN Type • RPAREN Exp

    RPAREN  shift, and go to state 81


State 58

   33 Exp: LPAREN Exp • RPAREN
   34    | Exp • ADD Exp
   35    | Exp • SUB Exp
   36    | Exp • MUL Exp
   37    | Exp • DIV Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • EQ Exp
   49    | Exp • NE Exp
   50    | Exp • LT Exp
   51    | Exp • GT Exp
   52    | Exp • LE Exp
   53    | Exp • GE Exp

    AND     shift, and go to state 59
    OR      shift, and go to state 60
    RPAREN  shift, and go to state 82
    EQ      shift, and go to state 62
    NE      shift, and go to state 63
    LT      shift, and go to state 64
    GT      shift, and go to state 65
    LE      shift, and go to state 66
    GE      shift, and go to state 67
    ADD     shift, and go to state 68
    SUB     shift, and go to state 69
    MUL     shift, and go to state 70
    DIV     shift, and go to state 71


State 59

   46 Exp: Exp AND • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 83


State 60

   47 Exp: Exp OR • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 84


State 61

   20 Statement: RETURN Exp SC •

    $default  reduce using rule 20 (Statement)


State 62

   48 Exp: Exp EQ • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 85


State 63

   49 Exp: Exp NE • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 86


State 64

   50 Exp: Exp LT • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 87


State 65

   51 Exp: Exp GT • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 88


State 66

   52 Exp: Exp LE • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 89


State 67

   53 Exp: Exp GE • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 90


State 68

   34 Exp: Exp ADD • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 91


State 69

   35 Exp: Exp SUB • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 92


State 70

   36 Exp: Exp MUL • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 93


State 71

   37 Exp: Exp DIV • Exp

    NOT     shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    LPAREN  shift, and go to state 38
    ID      shift, and go to state 39
    NUM     shift, and go to state 40
    NUM_B   shift, and go to state 41
    STRING  shift, and go to state 42

    Call  go to state 43
    Exp   go to state 94


State 72
